<resources>
    <string name="app_name">Alup Insurance</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="db_name">eb77da46-1de5-4651-b4e2-eecfbf76d72a</string>
    <string name="welcome">Welcome</string>
    <string name="we_are_making_farm_insurance_more_accessible">We are making farm insurance more accessible!</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="please_enter_a_valid_phone_number_to_continue">Please enter a valid phone number to continue</string>
    <string name="_0712345678">0712345678</string>
    <string name="verify_phone_with_otp">Verify Phone with OTP</string>
    <string name="we_ve_sent_you_an_otp_please_enter_it">We\'ve sent you an otp, please enter it</string>
    <string name="_000000">000000</string>
    <string name="continue_to_verify">Continue to Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="email_address_required">Email (optional)</string>
    <string name="phone_number_required">Phone Number</string>
    <string name="lastname_optional">Lastname</string>
    <string name="home">Home</string>
    <string name="payouts">Payouts</string>
    <string name="my_profile">Profile</string>
    <string name="my_policies">Policies</string>
    <string name="notifications">Notifications</string>
    <string name="_0_npolicies">0 Policies</string>
    <string name="_0_payouts">0 Payouts</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_are_about_to_sign_out">You are about to sign out!</string>
    <string name="you_will_need_to_sign_in_again_to_use_alup">You will need to sign in again to use Alup</string>
    <string name="stay_signed_in">Stay Signed In</string>
    <string name="something_went_wrong_please_try_again">Something went wrong. Please try again.</string>
    <string name="oh_no">Oh no!</string>
    <string name="fetching_data">Fetching data...</string>
    <string name="please_wait_while_we_fetch_your_data">Please wait while we fetch your data</string>
    <string name="no_data_found">No data found</string>
    <string name="there_are_no_data_available_for_this_section">There are no data available for this section.</string>
    <string name="try_again">Try Again</string>
    <string name="create">Create</string>
    <string name="first_name">First Name</string>
    <string name="total_payout">Total Payout</string>
    <string name="ksh_0_00">Ksh 0.00</string>
    <string name="total_due">Total Due</string>
    <string name="ksh_179_672_98">Ksh 179,672.98</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="create_farm">Create Farm</string>
    <string name="farm_name">Farm Name</string>
    <string name="number_of_acres">Number of Acres</string>
    <string name="valuechain_rice_maize_etc">ValueChain, Rice, Maize, etc</string>
    <string name="apply_for_insurance">Apply for Insurance</string>
    <string name="number_of_seasons_per_year">Number of seasons per year</string>
</resources>