<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error"
            style="@style/Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oh_no"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/retry"
            style="@style/Text.Regular"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bg_primary"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/something_went_wrong_please_try_again" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetching_data"
            android:textAlignment="center" />

        <TextView
            style="@style/Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/please_wait_while_we_fetch_your_data"
            android:textAlignment="center"
            android:textColor="@color/color_primary" />

        <ProgressBar
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:indeterminateTint="@color/color_primary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            style="@style/Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/there_are_no_data_available_for_this_section"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/fetch"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bg_primary"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/try_again" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:contentDescription="@string/create"
        android:src="@drawable/plus_solid"
        android:visibility="gone"
        app:backgroundTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>