<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fade_background">

    <LinearLayout
        android:id="@+id/ll_loaded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <ImageView
            android:id="@+id/iv_wide_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_64sdp"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_wide" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <TextView
            style="@style/Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome" />

        <TextView
            style="@style/Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/we_are_making_farm_insurance_more_accessible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/Text.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/bg_primary"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/log_in"
            android:textColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/Text.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_48sdp"
            android:background="@drawable/bg_secondary"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/create_account"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fade_background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>